[package]
name = "mikomikagi-lib"
version = "0.1.0"
edition = "2021"

[features]
std = ["blake3/std"]

[dependencies]
mikomikagi-schemes 	= { workspace = true }
mikomikagi-keyring 	= { workspace = true }
mikomikagi-core 	= { workspace = true }

borsh 				= { workspace = true }
blake3 				= { workspace = true }
aes-gcm 			= { workspace = true }
chacha20poly1305 	= { workspace = true }
rand 				= { workspace = true }
thiserror 			= { workspace = true }
